2006-07-11  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* VERSION (PATCH_LEVEL): bump version.

	* python/convertrules.py (conv): add rule for tupletNumberFormatFunction.

	* ly/engraver-init.ly (AncientRemoveEmptyStaffContext): remove
	tupletNumberFormatFunction.

	* scm/define-grobs.scm (all-grob-descriptions): calc TupletNumber
	text through 'text callback.

	* lily/time-scaled-music-iterator.cc (construct_children): copy
	tweaks generated events.

	* scm/define-context-properties.scm
	(all-user-translation-properties): remove tupletNumberFormatFunction

	* lily/tuplet-engraver.cc (process_music): don't read
	tupletNumberFormatFunction

	* scm/output-lib.scm (tuplet-number::calc-fraction-text): new
	function.

2006-07-11  Erik Sandberg  <mandolaerik@gmail.com>

	* lily/global-context-scheme.cc: Separated ly:run-translator into
	smaller pieces.

	* lily/score-engraver.cc, lily/score-performer.cc,
	scm/define-context-properties.scm: Make paper/midi output
	accessable as a context property.

	* lily/score-translator.cc, lily/score-context.cc: Removed.

2006-07-07  Guido Amoruso  <guidonte@katamail.com>

	* scm/ps-to-png.scm (Module): 
	* scm/framework-tex.scm (Module): 
	* scm/framework-ps.scm (Module): 
	* scm/backend-library.scm (Module): 
	* scm/framework-ps.scm: invoke gs with "-dDEVICEWIDTHPOINTS" and
	"dDEVICEHEIGHTPOINTS".

2006-07-04  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/ various: general improvements to
	"working with lilypond files" section.

2006-07-03  Erik Sandberg  <mandolaerik@gmail.com>

	* lily/sequential-iterator.cc: Change the default get_music_list
	to read elements-callback music property

	* scm/define-music-types.scm, scm/music-functions.scm: Cleaner
	processing of multimeasure rests. Softcoded
	sequential-music-iterator.

	* lily/sequential-music-iterator.cc: Removed.

2006-06-28  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/basic-notation.itely: clarify \repeatTie.
